# footprint-tool

./: .gitignore  CMakeLists.txt  README.md  install.py  vcpkg.json
src/: CMakeLists.txt  clipperlib.hpp  double2.hpp  double3.hpp  main.cpp
